<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subjectColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@mipmap/menu_image_foreground"/>
            <EditText
                android:id="@+id/login_username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/username"
                android:background="@drawable/input_form"
                android:selectAllOnFocus="true"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/input_form"
                android:selectAllOnFocus="true"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/login"
                android:background="@drawable/custom_button"
                android:layout_gravity="center"
                android:text="@string/Login"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/login_register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/holo_blue_dark"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>